# pubmed-knowledge-graph-generation

./: .gitignore  1_generate_patient_graph.ipynb  2_generate_lexical_graph.ipynb  3_generate_entity_graph.ipynb  CHANGELOG.md  Makefile  README.md  agent.py  generate_entity_graph.ipynb  generate_knowledge_graph.ipynb  generate_lexical_graph.ipynb  generate_patient_graph.ipynb  pubmed_abstracts.txt  pyneoinstance_config.yaml  pyproject.toml  requirements.txt  test_pubmed_retrieval.ipynb  validate_entity_graph.py
articles/text/: pubmed_abstracts.txt  pubmed_metadata.txt
assets/: example_agent_conversation.md
assets/mermaid/: entity-data-model.mmd  lexical-data-model.mmd  lexical-entity-data-model.mmd  patient-data-model.mmd
cypher/: build_member_similarity_model.cypher  demo_load_patient_journey.cypher  link_ontology_concepts.cypher  load_extended_journey_csv.cypher  load_patient_journey_model.cypher
data/claims/: care_gaps.csv  care_utilization_data.csv  claim_adjudication_data.csv  claims_with_all_codes.csv  patient_journey_with_providers.csv  provider_demographics.csv  providers.csv  risk_scores.csv
data/patient_journey/: conditions.csv  patients.csv  provider_contracts.csv
data/protocol/: extended_patient_journey.csv
docs/: Solara_ETG_Calibration.docx  graph_integration_overview.md  project_plan.md
neo4j_graphrag/: 2_generate_lexical_and_entity_graph.ipynb  README.md
resources/: Solara_PubMedKG.docx  clinical_requirements.md  user_stories.md
scripts/: fetch_pmc_articles.py  fetch_pubmed_articles.py  validate_entity_graph.py
